fix services grid on mobile

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -287,9 +287,9 @@
 
 @media(max-width: 768px) {
     .services-block__grid {
-        display: grid;
+        /* display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        gap: 20px; */
     }
 
     .category-list_service-selection {
@@ -304,11 +304,13 @@
 
 @media(max-width: 460px) {
     .services-block__grid {
-        display: grid;
+        /* display: grid;
         grid-template-columns: 1fr;
-        gap: 10px;
+        gap: 10px; */
     }
-
+    .services-block__item{
+        width: 100%
+    }
     .category-list_service-selection {
         margin: 40px 0px
     }
